# reviewlens-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 20260427_0001_initial_schema.py  20260427_0002_sessions.py  20260427_0003_review_chunks.py
backend/: __init__.py  config.py  main.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  chat.py  imports.py  ingest.py  jobs.py  reviews.py  sessions.py
backend/core/: __init__.py  url_validation.py
backend/ingestion/: __init__.py  dedupe.py  file_processor.py  models.py
backend/llm/: __init__.py  chat.py  embeddings.py  tracing.py
backend/scrapers/: __init__.py  models.py  router.py
backend/scrapers/parsers/: __init__.py  generic.py  (+1 more)
backend/storage/: __init__.py  database.py  models.py  s3.py  service.py
backend/workers/: __init__.py  queues.py  tasks.py
debug/scrapes/: brightdata_page_1.html  http_page_1.html  zyte_page_1.html
docs/: DESIGN.html  DESIGN.md
frontend/: index.html
frontend/css/: app.css
frontend/js/: app.js
scripts/: start-worker.sh
test_uploads/: 07a31d11-f4b2-4832-8543-b5819e8cd3f1.json
tests/: conftest.py  test_api_import.py  test_api_scrape.py  test_api_sessions.py  test_file_processor.py  test_generic_scraper.py  test_live_scrape_urls.py  test_llm_rag.py  test_storage.py  test_url_validation.py
uploads/: 7ac97990-bce5-4d48-a26f-9bd8ac6d8f83.csv  9011122d-4127-4967-b0b1-0f6757bfc451.csv  f5f17209-c5b6-474c-81c2-84be315e8028.csv
(+14 files in other folders)
